# SocketAssistant

./: .gitignore  README.md  settings.gradle
SerialPort/: CMakeLists.txt  build.gradle
SerialPort/src/androidTest/java/com/letter/serialport/: ExampleInstrumentedTest.kt
SerialPort/src/main/: AndroidManifest.xml
SerialPort/src/main/java/com/letter/serialport/: SerialPort.kt  SerialPortFinder.kt
SerialPort/src/main/jni/: SerialPort.c
SerialPort/src/test/java/com/letter/serialport/: ExampleUnitTest.kt
app/: build.gradle
app/release/: app-release.apk  output.json
app/src/main/: AndroidManifest.xml
app/src/main/java/utils/: CommonUtil.java
app/src/main/res/drawable/: bg_esp_touch_confirm_button.xml  bg_main_msg_left.xml  bg_main_msg_right.xml  bg_text_input.xml  ic_main_hex_receive.xml  ic_main_hex_transmit.xml
app/src/main/res/drawable-xxhdpi/: ic_esp_button.xml
app/src/main/res/layout/: activity_about.xml  activity_conn_config.xml  activity_esp_touch.xml  activity_esptouch.xml  activity_main.xml  activity_open_source.xml  activity_setting.xml  layout_esp_touch_configuring.xml  layout_main_message_item.xml  layout_main_nav_header.xml  layout_main_net_connection_param.xml  layout_main_serial_connection_param.xml  layout_main_serial_select.xml  layout_main_spinner_drop.xml  layout_open_source_item.xml  message_item.xml  nav_header.xml
app/src/main/res/menu/: menu_main_nav.xml  menu_main_toolbar.xml  nav_menu.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-zh/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+48 files in other folders)
